--- a/public/css/hexo-theme-yun.css
+++ b/public/css/hexo-theme-yun.css
@@ -124,7 +124,7 @@ html.dark {
   --hty-secondary-text-color: #555;
   --post-block-bg-color: #fff;
   --smc-link-color: #cb75cb;
-  --yun-bg-image: url("/images/Wallpaper/Light.jpg");
+  --yun-bg-image: url("https://telegraph-image-2qa.pages.dev/file/6c1c05c308378badd4792.jpg");
   --banner-line-color: #000;
   --banner-char-color: #000;
 }
@@ -135,7 +135,7 @@ html.dark {
   --hty-secondary-text-color: #eee;
   --post-block-bg-color: #1b1f2e;
   --smc-link-color: #db9edb;
-  --yun-bg-image: url("/images/Wallpaper/Dark.jpg");
+  --yun-bg-image: url("https://telegraph-image-2qa.pages.dev/file/6c75c995bc9e1cbec0740.jpg");
   --banner-line-color: #fff;
   --banner-char-color: #fff;
   --banner-char-bg-color: rgba(0,0,0,0.5);
@@ -1822,7 +1822,7 @@ input {
   max-height: 10000px;
 }
 :root {
-  --sidebar-bg-image: url("/images/HexoTagsWallpaper.jpg");
+  --sidebar-bg-image: url("https://telegraph-image-2qa.pages.dev/file/56a21040acdf06a3b8ccc.jpg");
 }
 #menu-btn {
   display: none;
