--- a/css/hexo-theme-yun.css
+++ b/css/hexo-theme-yun.css
@@ -33,7 +33,7 @@ html.dark {
   --prism-selector: #c3e88d;
 }
 :root {
-  --hty-primary-color: #cb75cb;
+  --hty-primary-color: #e5aa82;
   --hty-success-color: #21ba45;
   --hty-warning-color: #f2711c;
   --hty-danger-color: #db2828;
@@ -44,9 +44,9 @@ html.dark {
   --blockquote-border-left-color: var(--smc-border-color);
 }
 .primary {
-  color: #bd50bd;
+  color: #dc8d58;
   --blockquote-border-left-color: var(--hty-primary-color);
-  --blockquote-bg-color: rgba(203,117,203,0.1);
+  --blockquote-bg-color: rgba(229,170,130,0.1);
 }
 .success {
   color: #198f35;
@@ -123,8 +123,8 @@ html.dark {
   --hty-text-color: #333;
   --hty-secondary-text-color: #555;
   --post-block-bg-color: #fff;
-  --smc-link-color: #cb75cb;
-  --yun-bg-image: url("https://telegraph-image-2qa.pages.dev/file/6c1c05c308378badd4792.jpg");
+  --smc-link-color: #e5aa82;
+  --yun-bg-image: url("https://2dcaf961.telegraph-image-2qa.pages.dev/file/6f397636d7cee1ad17a70.jpg");
   --banner-line-color: #000;
   --banner-char-color: #000;
 }
@@ -134,8 +134,8 @@ html.dark {
   --hty-text-color: #f2f2f2;
   --hty-secondary-text-color: #eee;
   --post-block-bg-color: #1b1f2e;
-  --smc-link-color: #db9edb;
-  --yun-bg-image: url("https://telegraph-image-2qa.pages.dev/file/6c75c995bc9e1cbec0740.jpg");
+  --smc-link-color: #edc4a8;
+  --yun-bg-image: url("https://2dcaf961.telegraph-image-2qa.pages.dev/file/f4874c2bbc98f106d2e9b.jpg");
   --banner-line-color: #fff;
   --banner-char-color: #fff;
   --banner-char-bg-color: rgba(0,0,0,0.5);
@@ -145,8 +145,8 @@ html.dark {
   --sidebar-bg-color: rgba(27,31,46,0.95);
   --sidebar-bg-image: url("");
   --page-btn-bg-color: rgba(0,0,0,0.5);
-  --page-btn-hover-bg-color: rgba(245,227,245,0.9);
-  --page-btn-active-bg-color: #cb75cb;
+  --page-btn-hover-bg-color: rgba(250,238,230,0.9);
+  --page-btn-active-bg-color: #e5aa82;
 }
 .disable-hover,
 .disable-hover * {
@@ -199,7 +199,7 @@ body {
 }
 ::selection {
   color: #fff;
-  background: #8e71c1;
+  background: #dcc48c;
 }
 a {
   color: var(--smc-link-color);
@@ -268,7 +268,7 @@ details[open] {
 summary {
   font-weight: bold;
   padding: 0.8rem 0.8rem 0.8rem 1rem;
-  background-color: rgba(203,117,203,0.1);
+  background-color: rgba(229,170,130,0.1);
 }
 details[open] summary {
   border-bottom: 1px solid var(--smc-secondary);
@@ -295,7 +295,7 @@ body::before {
   animation-name: bgFadeIn;
   animation-duration: 2s;
   opacity: 1;
-  filter: blur(20px);
+  filter: blur(5px);
 }
 @-moz-keyframes bgFadeIn {
   from {
@@ -377,7 +377,7 @@ input {
 }
 #banner .char-left {
   border-left: 1px solid var(--banner-line-color);
-  border-right: 0px solid rgba(203,117,203,0.1);
+  border-right: 0px solid rgba(229,170,130,0.1);
   border-right-width: 0px;
   animation-duration: 0.4s;
   animation-delay: 0.4s;
@@ -385,7 +385,7 @@ input {
   animation-timing-function: ease-out;
 }
 #banner .char-right {
-  border-left: 0px solid rgba(203,117,203,0.1);
+  border-left: 0px solid rgba(229,170,130,0.1);
   border-right: 1px solid var(--banner-line-color);
   border-left-width: 0px;
   animation-duration: 0.4s;
@@ -493,7 +493,7 @@ input {
   animation: float 2s ease-in-out infinite;
 }
 #goDown .icon {
-  color: #cb75cb;
+  color: #e5aa82;
   width: 3rem;
   height: 3rem;
 }
@@ -915,8 +915,8 @@ input {
 }
 :root {
   --page-btn-bg-color: rgba(255,255,255,0.5);
-  --page-btn-hover-bg-color: rgba(203,117,203,0.7);
-  --page-btn-active-bg-color: rgba(213,145,213,0.9);
+  --page-btn-hover-bg-color: rgba(229,170,130,0.7);
+  --page-btn-active-bg-color: rgba(234,187,155,0.9);
 }
 .page-number-basic,
 .pagination .space,
@@ -1074,7 +1074,7 @@ input {
   margin: 0 1rem;
   padding: 0 0.5rem;
   border-radius: 2px;
-  color: #cb75cb;
+  color: #e5aa82;
   transition-property: all;
   transition-duration: 0.3s;
   transition-delay: 0s;
@@ -1092,10 +1092,10 @@ input {
   -webkit-font-smoothing: antialiased;
 }
 .hty-button:hover {
-  background-color: rgba(203,117,203,0.05);
+  background-color: rgba(229,170,130,0.05);
 }
 .hty-button--raised {
-  background-color: var(--hty-primary-color, #cb75cb);
+  background-color: var(--hty-primary-color, #e5aa82);
   box-shadow: 0px 2px 10px -1px rgba(0,0,0,0.3);
   color: #fff;
 }
@@ -1104,7 +1104,7 @@ input {
 }
 .hty-button--raised:hover {
   color: #fff;
-  background-color: rgba(203,117,203,0.9);
+  background-color: rgba(229,170,130,0.9);
 }
 .hty-icon-button {
   display: inline-flex;
@@ -1120,10 +1120,10 @@ input {
   transition-delay: 0s;
 }
 .hty-icon-button:hover {
-  background-color: rgba(203,117,203,0.1);
+  background-color: rgba(229,170,130,0.1);
 }
 .hty-icon-button:active {
-  background-color: rgba(203,117,203,0.3);
+  background-color: rgba(229,170,130,0.3);
 }
 .button-glow {
   animation-duration: 2s;
@@ -1136,7 +1136,7 @@ input {
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
   to {
-    box-shadow: 0 0 20px rgba(203,117,203,0.3);
+    box-shadow: 0 0 20px rgba(229,170,130,0.3);
   }
 }
 @-webkit-keyframes glowing {
@@ -1144,7 +1144,7 @@ input {
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
   to {
-    box-shadow: 0 0 20px rgba(203,117,203,0.3);
+    box-shadow: 0 0 20px rgba(229,170,130,0.3);
   }
 }
 @-o-keyframes glowing {
@@ -1152,7 +1152,7 @@ input {
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
   to {
-    box-shadow: 0 0 20px rgba(203,117,203,0.3);
+    box-shadow: 0 0 20px rgba(229,170,130,0.3);
   }
 }
 @keyframes glowing {
@@ -1160,7 +1160,7 @@ input {
     box-shadow: 0 0 0 rgba(0,0,0,0);
   }
   to {
-    box-shadow: 0 0 20px rgba(203,117,203,0.3);
+    box-shadow: 0 0 20px rgba(229,170,130,0.3);
   }
 }
 .hty-card {
@@ -1185,16 +1185,16 @@ input {
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 2px;
-  background-color: rgba(203,117,203,0.5);
+  background-color: rgba(229,170,130,0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-  background-color: rgba(203,117,203,0.3);
+  background-color: rgba(229,170,130,0.3);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(203,117,203,0.7);
+  background-color: rgba(229,170,130,0.7);
 }
 ::-webkit-scrollbar-thumb:active {
-  background-color: rgba(203,117,203,0.9);
+  background-color: rgba(229,170,130,0.9);
 }
 .iconfont {
   font-size: 1.2rem;
@@ -1216,7 +1216,7 @@ input {
 .spinner {
   width: 60px;
   height: 60px;
-  border: 1px solid #cb75cb;
+  border: 1px solid #e5aa82;
   margin: 100px auto;
   animation: rotateplane 1.2s infinite ease-in-out;
 }
@@ -1313,7 +1313,7 @@ input {
   display: flex;
   align-items: center;
   min-height: 3rem;
-  border-top: 1px solid rgba(203,117,203,0.05);
+  border-top: 1px solid rgba(229,170,130,0.05);
   padding-left: 1rem;
   padding-right: 1rem;
   justify-content: space-between;
@@ -1340,7 +1340,7 @@ input {
   height: 100%;
   width: 0;
   right: 0;
-  background: rgba(203,117,203,0.08);
+  background: rgba(229,170,130,0.08);
   border-radius: 4px;
   transition: width 0.2s ease;
 }
@@ -1407,7 +1407,7 @@ input {
 .post-collapse .collection-title {
   position: relative;
   margin: 0;
-  border-bottom: 2px solid rgba(203,117,203,0.6);
+  border-bottom: 2px solid rgba(229,170,130,0.6);
 }
 .post-collapse .collection-title::before {
   content: '';
@@ -1415,11 +1415,11 @@ input {
   top: 50%;
   width: 2px;
   height: 50%;
-  background: rgba(203,117,203,0.3);
+  background: rgba(229,170,130,0.3);
 }
 .post-collapse .collection-title .archive-year {
   font-family: 'Source Code Pro', Consolas, Monaco, SFMono-Regular, 'Ubuntu Mono', Menlo, monospace;
-  color: #cb75cb;
+  color: #e5aa82;
   margin: 0 1.5rem;
 }
 .post-collapse .collection-title .archive-year::before {
@@ -1431,7 +1431,7 @@ input {
   margin-top: -4px;
   width: 1.5rem;
   height: 1.5rem;
-  background: #cb75cb;
+  background: #e5aa82;
   border-radius: 50%;
 }
 .post-collapse .post-item {
@@ -1442,11 +1442,11 @@ input {
   position: absolute;
   width: 2px;
   height: 100%;
-  background: rgba(203,117,203,0.3);
+  background: rgba(229,170,130,0.3);
 }
 .post-collapse .post-header {
   position: relative;
-  border-bottom: 2px solid rgba(203,117,203,0.3);
+  border-bottom: 2px solid rgba(229,170,130,0.3);
   display: flex;
 }
 .post-collapse .post-header::before {
@@ -1458,7 +1458,7 @@ input {
   height: 0.5rem;
   margin-left: -4px;
   border-radius: 50%;
-  border: 1px solid #cb75cb;
+  border: 1px solid #e5aa82;
   background-color: #fff;
   z-index: 1;
   transition-property: all;
@@ -1467,7 +1467,7 @@ input {
   transition-property: background;
 }
 .post-collapse .post-header:hover::before {
-  background: #cb75cb;
+  background: #e5aa82;
 }
 .post-collapse .post-header .post-title {
   margin-left: 0.1rem;
@@ -1566,7 +1566,7 @@ input {
 .markdown-body blockquote {
   padding: 0.6rem 1rem;
   border-left: 4px solid var(--blockquote-border-left-color, --smc-border-color);
-  background-color: var(--blockquote-bg-color, rgba(203,117,203,0.05));
+  background-color: var(--blockquote-bg-color, rgba(229,170,130,0.05));
 }
 .markdown-body blockquote p {
   margin: 0;
@@ -1599,7 +1599,7 @@ input {
   transition: 0.4s;
 }
 .post-nav-item:hover {
-  background-color: rgba(203,117,203,0.1);
+  background-color: rgba(229,170,130,0.1);
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
 .post-nav-prev {
@@ -1703,7 +1703,7 @@ input {
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
-  background-color: #cb75cb;
+  background-color: #e5aa82;
 }
 .hamburger-box {
   outline: none;
@@ -1721,7 +1721,7 @@ input {
 .hamburger-inner::after {
   width: 25px;
   height: 2px;
-  background-color: #cb75cb;
+  background-color: #e5aa82;
   border-radius: 3px;
   position: absolute;
 }
@@ -1767,15 +1767,15 @@ input {
   margin-bottom: 0;
 }
 .sidebar-nav .sidebar-nav-item {
-  border: 1px solid #cb75cb;
-  color: #cb75cb;
+  border: 1px solid #e5aa82;
+  color: #e5aa82;
   margin: 0 1.25rem;
 }
 .sidebar-nav .sidebar-nav-item:hover {
   transition-property: all;
   transition-duration: 0.3s;
   transition-delay: 0s;
-  background-color: #cb75cb;
+  background-color: #e5aa82;
   color: #fff;
 }
 .sidebar-nav .sidebar-nav-item .icon {
@@ -1783,9 +1783,9 @@ input {
   height: 1.5rem;
 }
 .sidebar-nav .sidebar-nav-active {
-  background-color: #cb75cb;
+  background-color: #e5aa82;
   color: #fff;
-  box-shadow: 0 0 10px rgba(203,117,203,0.2);
+  box-shadow: 0 0 10px rgba(229,170,130,0.2);
 }
 .post-toc {
   line-height: 1.8;
@@ -1966,7 +1966,7 @@ input {
   transition: 0.4s;
 }
 .site-author-avatar img:hover {
-  box-shadow: 0 0 30px rgba(203,117,203,0.2);
+  box-shadow: 0 0 30px rgba(229,170,130,0.2);
 }
 .site-author-avatar img {
   border-radius: 50%;
@@ -2051,7 +2051,7 @@ input {
   bottom: 1.1rem;
   z-index: 20;
   opacity: 0;
-  color: #cb75cb;
+  color: #e5aa82;
   transition-property: all;
   transition-duration: 0.3s;
   transition-delay: 0s;
@@ -2165,7 +2165,7 @@ input {
   right: 0.8rem;
 }
 #search .icon {
-  color: #cb75cb;
+  color: #e5aa82;
 }
 #comment {
   margin: 0 1rem;
