--- a/css/hexo-theme-yun.css
+++ b/css/hexo-theme-yun.css
@@ -1822,7 +1822,7 @@ input {
   max-height: 10000px;
 }
 :root {
-  --sidebar-bg-image: url("https://telegraph-image-2qa.pages.dev/file/56a21040acdf06a3b8ccc.jpg");
+  --sidebar-bg-image: url("https://telegraph-img-by-bot.pages.dev/file/56a21040acdf06a3b8ccc.jpg");
 }
 #menu-btn {
   display: none;
