--- a/css/hexo-theme-yun.css
+++ b/css/hexo-theme-yun.css
@@ -1822,7 +1822,7 @@ input {
   max-height: 10000px;
 }
 :root {
-  --sidebar-bg-image: url("https://cloudflare-imgbed-telegraph.pages.dev/file/56a21040acdf06a3b8ccc.jpg");
+  --sidebar-bg-image: url("https://cloudflare-imgbed-telegraph.pages.dev/file/Neri_Draw.jpg");
 }
 #menu-btn {
   display: none;
