进入归档模式，由Hexo迁移至Valaxy框架前的最后一次Hexo部署（感谢Hexo框架支持的这三年）

--- a/css/hexo-theme-yun.css
+++ b/css/hexo-theme-yun.css
@@ -1822,7 +1822,7 @@ input {
   max-height: 10000px;
 }
 :root {
-  --sidebar-bg-image: url("https://cloudflare-imgbed-telegraph.pages.dev/file/Neri_Draw.jpg");
+  --sidebar-bg-image: url("https://cloudflare-imgbed-telegraph.pages.dev/file/MTYW_2025_05_14_FOR_MU.png");
 }
 #menu-btn {
   display: none;
